# archnews

./: .gitignore  README  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
archnews/: __init__.py  fetcher.py
tests/: conftest.py  test_fetcher.py  test_sanity.py
